--- a/ReadMe
+++ b/ReadMe
@@ -1,3 +1,3 @@
-Adds PATCH request capabilities to TWX. Only PatchJSON is supported at the moment.
+Adds PATCH request capabilities to TWX, as well as auth using client side ssl certs
 
 Run the gradle task : packageExtension
